[gd_scene load_steps=4 format=3 uid="uid://dqnvgnkpmfx4f"]

[ext_resource type="Texture2D" uid="uid://btqua7uwew6sf" path="res://assets/ui/checkbox_on.png" id="1_87evc"]
[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="1_misbj"]
[ext_resource type="Texture2D" uid="uid://cky7j8nvlydwr" path="res://assets/ui/checkbox_off.png" id="2_h8xp7"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_misbj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Continue"
flat = true

[node name="Sound" type="CheckButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_icons/checked = ExtResource("1_87evc")
theme_override_icons/unchecked = ExtResource("2_h8xp7")
text = "Sound"

[node name="Fullscreen" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen"
flat = true

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Menu"
flat = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/Sound" to="." method="_on_sound_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
